tests/compile_errors/local-shadowing.buzz
// A local named `local` already exists
test "Should not be able to shadow upper score locals" {
    if (true) {
        final local = "hello";

        if (true) {
            final local = "bye";
        }
    }
}
